--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,4 +10,4 @@ jobs:
       - uses: actions/checkout@v3
       - run: npm install
       - run: npm install --save moment
-      - run: node app.js
+      - run: npm start
